--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ public/
 
 # Local Netlify folder
 .netlify
+/exercises/03_if/if1.rs
+/exercises/03_if/if2.rs
+/exercises/03_if/if3.rs
+/exercises/03_if/README.md
